fix overflowing form-selects on small devices

--- a/public_html/assets/css/nf-core.css
+++ b/public_html/assets/css/nf-core.css
@@ -1165,6 +1165,9 @@ Based on https://codepen.io/wintr/pen/beBJBb */
   .param-docs-row code {
     font-size: 87.5%;
   }
+  .form-control{
+    min-width: 50%;
+  }
 }
 .bg-lightgray{
   background-color: rgba(220,220,220,0.2);
